# pinn_tomo_cleanroom

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: marmousi_data_cropped.bin.dvc  marmousi_training_picks.csv  marmousi_training_picks.csv.dvc  vp.bin.dvc
src/pinn_tomo_cleanroom/: 02_pick_times.py  03_training.py  __init__.py  generate_marmousi_data_01.py  initialize_network_03.py  train_04.py
